--- a/myAlbum/templates/all-gallery/base.html
+++ b/myAlbum/templates/all-gallery/base.html
@@ -1,3 +1,4 @@
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <html>
 
@@ -10,12 +11,23 @@
     <title> Vitalis Album</title>
     {% endif %}
 
+    {% block styles %}
+    {% bootstrap_css %}
+    {% endblock %}
+
 </head>
 
 <body>
     {% block content %} 
-    <h1>Welcome To Vitalis Album</h1>
+    <h1 class='text-center'>Welcome To Vitalis Album</h1>
+    <hr>
     {%endblock%}
+
+    {% block scripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    {% bootstrap_javascript %}
+    {% endblock %}
+
 </body>
 
 </html>
