--- a/myAlbum/templates/all-gallery/base.html
+++ b/myAlbum/templates/all-gallery/base.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+
+    {% include "navbar.html" %}
+
     {% block content %} 
     <h1 class='text-center'>Welcome To Vitalis Album</h1>
     <hr>
