--- a/myAlbum/templates/all-gallery/base.html
+++ b/myAlbum/templates/all-gallery/base.html
@@ -15,6 +15,9 @@
     {% block styles %}
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
     {% endblock %}
 
 </head>
@@ -24,7 +27,7 @@
     {% include "navbar.html" %}
 
     {% block content %} 
-    <h1 class='text-center'>Welcome To Vitalis Album</h1>
+    <h1 class='text-center' style="font-family: 'Cinzel Decorative', cursive;">Welcome To Vitalis Album</h1>
     <hr>
     {%endblock%}
 
