--- a/myAlbum/templates/all-gallery/base.html
+++ b/myAlbum/templates/all-gallery/base.html
@@ -18,6 +18,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Charm&display=swap" rel="stylesheet">
     {% endblock %}
 
 </head>
@@ -27,8 +31,7 @@
     {% include "navbar.html" %}
 
     {% block content %} 
-    <h1 class='text-center' style="font-family: 'Cinzel Decorative', cursive;">Welcome To Vitalis Album</h1>
-    <hr>
+    
     {%endblock%}
 
     {% block scripts %}
