pushing changes to homepage template.

--- a/myAlbum/templates/all-gallery/album-homepage.html
+++ b/myAlbum/templates/all-gallery/album-homepage.html
@@ -18,38 +18,77 @@
 {{block.super}}
 
 <style>
-    *{
+    * {
         font-family: 'Charm',
-    cursive;
+            cursive;
         font-size: 24px;
     }
 </style>
 
-<div class="container">
+<div id="introduction" class='text-center'>
 
-    <div id="introduction" class='text-center'>
-    
-        <h1 style="font-family: 'Cinzel Decorative', cursive;">Welcome To Vitalis Album</h1>
-        <hr>
-        <p>Your favorite online photo album</p>
-        <hr>
-    
-    </div>
+    <h1 style="font-family: 'Cinzel Decorative', cursive;">Welcome To Vitalis Album</h1>
+    <hr>
+    <p>Your favorite online photo album</p>
+    <hr>
+
+</div>
+
+<div class="container">
 
     <!-- Images Section -->
 
     <div class="images">
 
-        {% for image in images %}
+        {% for image in images%}
+        <div class="col-lg-6">
+            <a href="#{{image.id}}" data-toggle="modal" data-target="#{{image.id}}">
+                <h5 class="text-center" style="font-size:25px; font-weight:600">{{image.image_name}}</h5>
+                <img src="{{image.image.url}}" class="img-responsive" alt="{{image.image_name}}"
+                    style="width:100%;width:100%">
+            </a>
+            <div class="modal fade" id="{{image.id}}" role="dialog">
+                <div class="modal-dialog modal-xl">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">{{image.image_name}}</h4>
+                            <img src="{{image.image.url}}" class="img-responsive" alt="Image"
+                                style="width:100%;max-width:100%">
+                        </div>
+                        <div class="modal-body">
+                            <p class="text-justify">{{image.image_details}}</p>
+                            <p class="text-left"><strong style="color: brown;">Location: </strong>
+                                {{image.image_location}}</p>
+                            <p class="text-left"><strong style="color: brown;">Category: </strong>
+                                {{image.image_category}}</p>
+                        </div>
+                        <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 padding-1">
+                            <input id="{{image.id}}-url" class="form-control input-md responsive" type="text"
+                                value="{{image.image.url}}">
+                        </div>
 
-        <img src="{{image.image.url}}" alt="" class="img-responsive">
-        <br>
-        <p> <strong>Name: </strong> {{image.image_name}}</p>
-        <p> <strong>Description: </strong> {{image.image_details}} </p>
-        <p><strong>Category: </strong> {{image.image_category}} </p>
-        <p><strong>Location: </strong>{{image.image_location}}</p>
+                        <button type="button" onclick="copyToClipboard();">Copy</button>
 
-        {% endfor %}
+                        <script>
+                            function copyToClipboard() {
+                                var copyText = document.getElementById("{{image.id}}-url");
+                                copyText.select();
+                                copyText.setSelectionRange(0, 99999)
+                                document.execCommand("copy");
+                                alert('url copied');
+                            }
+                        </script>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        {%endfor%}
 
     </div>
 
