--- a/myAlbum/templates/navbar.html
+++ b/myAlbum/templates/navbar.html
@@ -13,22 +13,22 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="{% url 'home' %}">Vitalis Album</a>
             </div>
+        
+        <div class="col-sm-4 col-md-4 navbar-right">
+            <div class="navbar-form" role="search" action="/">
+                <form class="col-md-6" role="search" action="{% url 'search_category' %}">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="search images category" name="category">
+                        <div class="input-group-btn">
+                            <button class="btn btn-info" type="submit">Search</button>
+                        </div>
+                    </div>
+        
+                </form>
+            </div>
+        </div>
         </div>
     </nav>
-
-    <div class="col-sm-4 col-md-4 navbar-right">
-        <div class="navbar-form" role="search" action="/">
-            <form class="col-md-6" role="search" action="{% url 'search_category' %}">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search image category" name="category">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-    
-            </form>
-        </div>
-    </div>
 
 </body>
 
