--- a/myAlbum/templates/all-gallery/album-homepage.html
+++ b/myAlbum/templates/all-gallery/album-homepage.html
@@ -64,7 +64,7 @@
                             <p class="text-left"><strong style="color: brown;">Location: </strong>
                                 {{image.image_location}}</p>
                             <p class="text-left"><strong style="color: brown;">Category: </strong>
-                                {{image.image_category}}</p>
+                                {{image.category}}</p>
                         </div>
                         <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 padding-1">
                             <input id="{{image.id}}-url" class="form-control input-md responsive" type="text"
