--- a/myAlbum/templates/navbar.html
+++ b/myAlbum/templates/navbar.html
@@ -13,7 +13,8 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="{% url 'home' %}">Vitalis Album</a>
             </div>
-        
+
+            <!-- search form for searching categories -->
         <div class="col-sm-4 col-md-4 navbar-right">
             <div class="navbar-form" role="search" action="/">
                 <form class="col-md-6" role="search" action="{% url 'search_category' %}">
@@ -27,6 +28,25 @@
                 </form>
             </div>
         </div>
+
+        <!-- dropdown for search by location -->
+        <div class=" navbar-right">
+            <ul class="navbar-nav mr-auto" style="list-style: none">
+                <li class="dropdown">
+                    <a class="nav-link dropdown-toggle location navbar-brand" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="text-decoration: none;">
+                        Search Images Location
+                    </a>
+                    <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdown">
+                        {% for location in location %}
+                        <p style="margin-left:2%"><a class="dropdown-item"
+                                href="/location/{{location.location_name}}">{{location.location_name}}</a></p>
+                        {%endfor%}
+                    </div>
+                </li>
+            </ul>
+        </div>
+
         </div>
     </nav>
 
