--- a/myAlbum/templates/all-gallery/album-homepage.html
+++ b/myAlbum/templates/all-gallery/album-homepage.html
@@ -62,7 +62,7 @@
                         <div class="modal-body">
                             <p class="text-justify">{{image.image_details}}</p>
                             <p class="text-left"><strong style="color: brown;">Location: </strong>
-                                {{image.image_location}}</p>
+                                {{image.location}}</p>
                             <p class="text-left"><strong style="color: brown;">Category: </strong>
                                 {{image.category}}</p>
                         </div>
